--- a/styles/newstagram.css
+++ b/styles/newstagram.css
@@ -18,8 +18,7 @@ body {
 }
 
 .wireframe {
-	width: 80%;
-	margin: 10%;	
+	width: 100%;	
 }
 
  @media only screen and (max-width: 700px) {
@@ -28,4 +27,12 @@ body {
 		margin: 5%;
 	}
 
-}
+	.page-title {
+		font-size: 30px;
+	}
+
+	.project-info {
+		font-size: 16px;
+	}
+
+} 
