--- a/styles/nav.css
+++ b/styles/nav.css
@@ -51,15 +51,7 @@
 	height: 30px;
 }
 
-#hamburger2 {
-	position: absolute;
-	right: 20px;
-	top: 40%;
-	width: 30px;
-	height: 30px;
-}
-
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 770px) {
 	#my-nav {
 		height: 60px; 
 	}
@@ -72,7 +64,8 @@
 		display: none;
 		background-color: white;
 		color: black;
-		height: 30px;
+		height: 100px;
+		font-size: 50px;
 		margin: 0;
 		padding-right: 30px;
 	}
