--- a/styles/upark.css
+++ b/styles/upark.css
@@ -58,6 +58,7 @@ body {
 	width: 28%;
 	margin: 2%;
 	display: inline-block;
+	border: 1px solid black;
 }
 
 .product-pic-medium {
@@ -69,7 +70,7 @@ body {
 
 @media only screen and (max-width: 1000px) {
 	.product-pic-small {
-		width: 100%;
+		width: 50%;
 		margin-bottom: 5px;
 	}
 	.caption-large {
@@ -82,6 +83,10 @@ body {
 
 	#secondary-pics {
 		display: block;
+	}
+
+	.product-pic-small {
+		width: 100%;
 	}
 
 	.pics-2 {
@@ -97,6 +102,8 @@ body {
 		width: 100%;
 		margin-top: 5%;
 		margin-bottom: 5%;
+		margin-left: 0%;
+		margin-right: 0%;
 	}
 
 	.product-pic-medium {
