--- a/styles/nav.css
+++ b/styles/nav.css
@@ -24,6 +24,8 @@
 	cursor: pointer;
     -webkit-transition: color 0.6s; /* Safari */
     transition: color 0.6s;
+    position: relative;
+    z-index: 1;
 }
 
 .nav-item {
@@ -34,6 +36,8 @@
 	cursor: pointer;
     -webkit-transition: color 0.4s; /* Safari */
     transition: color 0.4s;
+    position: relative;
+    z-index: 2;
 }
 
 .nav-item:hover {
@@ -49,6 +53,7 @@
 	top: 40%;
 	width: 30px;
 	height: 30px;
+	z-index: 3;
 }
 
 @media only screen and (max-width: 770px) {
@@ -75,7 +80,7 @@
 	}
 
 	#home-nav-item {
-		margin-top: 60px;
+		padding-top: 60px;
 	}
 
 	.padding-large {
