--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,46 +1,28 @@
 #contact {
-	background-color: #393939;
-	color: white;
 	text-align: center;
 	vertical-align: bottom;
 	width: 100%;
+	border-top: #E3E3E3 1px solid;
 }
 
 .contact-title {
 	font-weight: 200;
-	font-size: 16px;
+	font-size: 24px;
 }
 
 .contact-text {
-	vertical-align: top;
 	font-weight: 300;
-	width: 30%;
-	color: white;
+	width: 100%;
+	text-align: center;
 	margin-top: 30px;
 	font-family: "Helvetica Neue";
-	font-size: 12px;
+	font-size: 16px;
 	display: inline-block;
-	margin: 20px;
-}
-
-#left {
-	text-align: right;
-}
-
-#right {
-	text-align: left;
 }
 
 #social {
-	text-align: left;
-}
-
-.social-icon {
-	width: 35px;
-	height: 35px;
-	display: inline-block;
-	margin-left: 15px;
-	margin-right: 15px;
+	margin-bottom: 30px;
+	text-align: center;
 }
 
 #contact a {
@@ -50,24 +32,20 @@
 
 #copyright {
 	vertical-align: bottom;
-	text-align: left;
-	bottom: 8px;
-	left: 8px;
-	background-color: #393939;
-	color: white;
+	text-align: center;
+	margin-bottom: 10px;
+	background-color: white;
 	width: 100%;
 	font-family: "Helvetica Neue";
-	font-size: 10px;
+	font-size: 12px;
 }
 
 @media only screen and (max-width: 800px) {
 	.contact-title {
 		font-weight: 300;
-		font-size: 14px;
 	}
 
-	.contact-text {
-		font-size: 12px;
+	.contact-text, #social {
 		font-weight: 400;
 	}
 }
