--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,29 +1,39 @@
 #contact {
-	text-align: center;
-	vertical-align: bottom;
+	font-family: "Avenir";
 	width: 100%;
 	border-top: #E3E3E3 1px solid;
+	display: inline-block;
+	vertical-align: top;
+}
+
+p {
+	line-height: 5px;
 }
 
 .contact-title {
-	font-weight: 200;
-	font-size: 24px;
+	vertical-align: top;
+	font-size: 22px;
+	margin-top: 30px;
+	width: 15%;
+	margin-left: 35%;
+	margin-right: 1%;
+	display: inline-block;
+	text-align: right;
 }
 
 .contact-text {
-	font-weight: 300;
-	width: 100%;
-	text-align: center;
+	width: 40%;
+	text-align: left;
 	margin-top: 30px;
-	font-family: "Helvetica Neue";
 	font-size: 16px;
+	margin-left: 1%;
 	display: inline-block;
 }
 
 #social {
 	font-weight: 300;
 	margin-bottom: 30px;
-	text-align: center;
+	text-align: left;
 }
 
 #contact a {
@@ -37,17 +47,19 @@
 	margin-bottom: 10px;
 	background-color: white;
 	width: 100%;
-	font-family: "Helvetica Neue";
 	font-size: 12px;
 }
 
 @media only screen and (max-width: 800px) {
-	.contact-title {
-		font-weight: 300;
+	#contact {
+		text-align: center;
 	}
 
-	.contact-text, #social {
-		font-weight: 400;
+	.contact-text, #social, .contact-title {
+		width: 100%;
+		margin-left: 0;
+		margin-right: 0;
+		text-align: center;
 	}
 }
 
