--- a/styles/nav.css
+++ b/styles/nav.css
@@ -6,6 +6,7 @@
 	text-align: right;
 	border-bottom: #E3E3E3 1px solid;
 	background-color: white;
+	font-family: "Avenir"
 }
 
 #my-nav a {
@@ -19,7 +20,6 @@
 .nav-logo {
 	margin: 13px;
 	float: left;
-	font-family: "Helvetica Neue";
 	font-weight: 200;
 	cursor: pointer;
     -webkit-transition: color 0.6s; /* Safari */
@@ -31,7 +31,6 @@
 .nav-item {
 	margin: 15px;
 	display: inline-block;
-	font-family: "Helvetica Neue";
 	font-weight: 200;
 	cursor: pointer;
     -webkit-transition: color 0.4s; /* Safari */
