--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,4 +1,5 @@
 #projects {
+	font-family: "Avenir";
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 }
@@ -9,13 +10,11 @@
 }
 
 .project-title {
-	font-family: "Helvetica Neue";
     font-weight: 100;
 	font-size: 28px;	
 }
 
 .project-title-mobile {
-	font-family: "Helvetica Neue";
     font-weight: 100;
 	font-size: 26px;
 	display: none;
@@ -37,7 +36,6 @@
 }
 
 .captions {
-	font-family: "Helvetica Neue";
     font-weight: 180;
 	font-size: 14px;
 	text-align: left;
@@ -62,7 +60,6 @@
 .overlay-text {
 	opacity: 0;
 	color: white;
-	font-family: "Helvetica Neue";
     font-weight: 280;
 	font-size: 18px;
 	text-align: left;
