--- a/styles/about.css
+++ b/styles/about.css
@@ -59,11 +59,15 @@ body {
 }
 
 
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 750px) {
 	#about-title {
 	    letter-spacing: 10px;
-		font-size: 35px;
+		font-size: 50px;
 		margin-top: 5%;	
+	}
+
+	#about-description {
+		font-size: 20px;
 	}
 }
 
