--- a/styles/contact.css
+++ b/styles/contact.css
@@ -12,9 +12,9 @@
 
 .contact-title {
 	vertical-align: top;
-	font-size: 22px;
+	font-size: 18px;
 	margin-top: 30px;
-	width: 15%;
+	width: 14%;
 	margin-left: 35%;
 	margin-right: 1%;
 	display: inline-block;
@@ -25,7 +25,7 @@
 	width: 40%;
 	text-align: left;
 	margin-top: 30px;
-	font-size: 16px;
+	font-size: 14px;
 	margin-left: 1%;
 	display: inline-block;
 }
@@ -45,6 +45,7 @@
 	vertical-align: bottom;
 	text-align: center;
 	margin-bottom: 10px;
+	color: #a6a6a6;
 	background-color: white;
 	width: 100%;
 	font-size: 12px;
