--- a/styles/global2.css
+++ b/styles/global2.css
@@ -54,14 +54,12 @@ li {
 
 .page-title {
     padding-top: 10%;
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
-    font-weight: 100;
-    letter-spacing: 25px;
-	font-size: 60px;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    font-weight: 0;
+	font-size: 40px;
 	z-index: 1;
-    line-height: -90px;
     text-align: center;
 }
 
@@ -69,21 +67,19 @@ li {
 	width: 80%;
     margin-left: 10%;
     margin-right: 10%;
-	font-size: 20px;
 	text-align: center;
-	font-weight: 50;
 	letter-spacing: 2px;
+	color: gray;
+
+	font-weight: 600;
+	font-size: 14px;
+	text-transform: uppercase;
 }
 
 .project-info p {
 	display: inline-block;
 	margin-left: 2px;
 	margin-right: 2px;
-}
-
-.project-info  a {
-	text-decoration: none;
-	color: #18A398;
 }
 
 .summary {
@@ -93,10 +89,12 @@ li {
 .context-title {
 	width: 100%;
 	float: left;
-	font-weight: 200;
 	letter-spacing: 2px;
-	font-size: 26px;
 	margin-bottom: 10px;
+	font-weight: 600;
+	font-size: 14px;
+	text-transform: uppercase;
+	color: gray;
 }
 
 .context-summary {
@@ -113,10 +111,15 @@ li {
 }
 
 .context-subtitle {
-	font-weight: 300;
-	font-size: 20px;
 	letter-spacing: 2px;
 	margin-bottom: 5px;
+
+	font-weight: 600;
+	font-size: 14px;
+	text-transform: uppercase;
+	color: gray;
+/*	font-weight: 300;
+	font-size: 20px;*/
 }
 
 .context-description {
@@ -130,32 +133,25 @@ li {
 }
 
 .section-title {
-	display: inline-table;
-	width: 100%;
-    font-weight: 100;
-    letter-spacing: 20px;
-	font-size: 60px;
-    text-align: center;
-    margin-top: 8%;
-    margin-bottom: 3%;
+    width: 90%;
+    margin: 5%;
+    margin-left: 0;
+    font-weight: 0;
+	font-size: 40px;
+	z-index: 1;
+    text-align: left;
 }
 
 .process-title {
-	font-weight: 200;
-	letter-spacing: 2px;
+	margin-top: 6%;
+	margin-bottom: 1%;
+	font-weight: 500;
 	font-size: 24px;
-	margin-bottom: 10px;
-	margin-top: 40px;
 }
 
 .panel {
 	font-size: 16px;
 	margin-bottom: 2%;
-}
-
-.panel a {
-	text-decoration: none;
-	color: #18A398;
 }
 
 .next-project {
@@ -176,10 +172,6 @@ li {
 	opacity: 1;
     -webkit-transition: opacity 0.6s; /* Safari */
     transition: opacity 0.6s;
-}
-
-.next-project a {
-	text-decoration: none;
 }
 
 .next-project:hover {
@@ -214,7 +206,6 @@ li {
 	.inner-text {
 		float: left;
 		width: 100%;
-		margin-bottom: 50px;
 		margin-left: 0%;
 	}
 	#arrow-up {
@@ -226,17 +217,9 @@ li {
 
 	.page-title {
 		padding-top: 20%;
-		font-size: 50px;
-		margin-left: 0;
-		margin-right: 0;
-		width: 100%;
-		text-align: center;
-		letter-spacing: 15px;
-	}
-
-	.project-info {
-		font-size: 18px;
+		line-height: 34px;
 		text-align: left;
+		font-size: 30px;
 	}
 
 	.section-title {
@@ -245,14 +228,16 @@ li {
 	}
 
 	.project-info {
-		font-size: 16px;
-		letter-spacing: 0px;
-		text-align: center;
+		font-size: 12px;
+		text-align: left;
+		margin-right: 0;
+		margin-left: 0;
 	}
 
 	.context-summary {
 		width: 100%;
 		margin-bottom: 20px;
+		font-size: 16px;
 	}
 
 	.next-project {
@@ -271,12 +256,8 @@ li {
 		font-size: 16px;
 	}
 
-	.context-summary {
-		font-size: 16px;
-	}
-
 	.context-subtitle, .context-title {
-		font-size: 24px;
+		font-size: 12px;
 	}
 
 
