--- a/styles/newstagram.css
+++ b/styles/newstagram.css
@@ -18,7 +18,6 @@ body {
 
 .pics-3 {
 	width: 32%;
-	margin-right: 1%;
 }
 
 .wireframe {
@@ -32,8 +31,7 @@ body {
 
  @media only screen and (max-width: 700px) {
 	.pics-3 {
-		width: 90%;
-		margin: 5%;
+		width: 100%
 	}
 
 	.pics-2 {
