fixed lil project info bug

--- a/styles/global2.css
+++ b/styles/global2.css
@@ -231,7 +231,7 @@ li {
 		font-size: 12px;
 		text-align: left;
 		margin-right: 0;
-		margin-left: 0;
+		margin-left: 5%;
 	}
 
 	.context-summary {
