--- a/styles/nav.css
+++ b/styles/nav.css
@@ -18,9 +18,11 @@
 }
 
 .nav-logo {
-	margin: 13px;
+	margin: 15px;
 	float: left;
-	font-weight: 200;
+	font-weight: 400;
+	letter-spacing: 1px;
+	font-size: 14px;
 	cursor: pointer;
     -webkit-transition: color 0.6s; /* Safari */
     transition: color 0.6s;
@@ -31,7 +33,9 @@
 .nav-item {
 	margin: 15px;
 	display: inline-block;
-	font-weight: 200;
+	font-weight: 400;
+	letter-spacing: 1px;
+	font-size: 14px;
 	cursor: pointer;
     -webkit-transition: color 0.4s; /* Safari */
     transition: color 0.4s;
