--- a/styles/about.css
+++ b/styles/about.css
@@ -10,13 +10,14 @@ body {
 }
 
 #about-title {
-    padding-top: 20%;
+    padding-top: 10%;
 	position: relative;
     font-weight: 100;
     letter-spacing: 25px;
 	font-size: 50px;
 	z-index: 1;
     line-height: 90px;
+    text-align: center;
 }
 
 #about-pic {
