--- a/styles/global.css
+++ b/styles/global.css
@@ -13,6 +13,15 @@
 	src: url("fonts/Metropolis-Thin.otf");
 }
 
+@font-face {
+	font-family: "Tokyo";
+	src: url("fonts/TokyoMerged-Regular.ttf");
+}
+
+@font-face {
+	font-family: "Tokyo-Outline";
+	src: url("fonts/TokyoOutline-Regular.ttf");
+}
 
 table, th, td {
     border: 1px solid black;
@@ -26,19 +35,6 @@ table, th, td {
 
 .gray {
 	color: #696969;
-}
-
-#arrow-down {
-	height: 40px;
-	width: 40px;
-	cursor: pointer;
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	margin: auto;
-	z-index: 5;
-
 }
 
 #arrow-up {
@@ -82,7 +78,6 @@ table, th, td {
 	text-align: center;
 	position: absolute;
 	display: inline-block;
-	font-family: "Helvetica Neue";
 	font-size: 16px;
 	margin-left: 5px;
 	margin-right: 5px;
@@ -133,7 +128,6 @@ table, th, td {
 	padding-left: 40px;
 	padding-right: 40px;
 	border-radius: 5px;
-	font-family: "Helvetica Neue";
 	font-size: 20px;
 	color: white; 
 	text-decoration: none
@@ -144,33 +138,16 @@ table, th, td {
 	width: 100%;
 	margin-top: 20px;
 	margin-bottom: 20px;
-	font-family: "Helvetica Neue";
 	font-size: 48px;
 	display: grid;
 }
 
-.project-info {
-	text-align: center;
-	width: 80%;
-	margin-left: 10%;
-	margin-right: 10%;
-	font-family: "Helvetica Neue";
-	font-size: 18px;
-	margin-bottom: 20px;
-}
-
-.project-info a {
-	color: rgb(247, 122, 100);
-}
-
 .subheader {
-	font-family: "Helvetica Neue";
 	font-size: 36px;
 	text-align: left;
 }
 
 .subheader2 {
-	font-family: "Helvetica Neue";
 	font-size: 24px;
 	text-align: center;
 	margin-bottom: 10px;
@@ -179,21 +156,18 @@ table, th, td {
 }
 
 .subheader3 {
-	font-family: "Helvetica Neue";
 	font-size: 18px;
 	margin-bottom: 5px;
 	margin-top: 5px;
 }
 
 .subheader4 {
-	font-family: "Helvetica Neue";
 	font-size: 24px;
 	margin-bottom: 5px;
 	margin-top: 5px;	
 }
 
 .h4 {
-	font-family: "Helvetica Neue";
 	font-size: 18px;
 	margin-bottom: 5px;
 	margin-top: 5px;
@@ -233,7 +207,6 @@ table, th, td {
 }
 
 .content {
-	font-family: "Helvetica Neue";
 	font-weight: lighter;
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
@@ -249,7 +222,6 @@ table, th, td {
 
 .process-overview {
 	font-size: 26px;
-	font-family: "Helvetica Neue";
 }
 
 .process-content {
@@ -258,7 +230,6 @@ table, th, td {
 
 .final-product-text {
 	font-size: 16px;
-	font-family: "Helvetica Neue";
 	text-align: center;
 	margin-bottom: 20px;
 }
@@ -323,7 +294,6 @@ table, th, td {
 
 .caption {
 	font-size: 18px;
-	font-family: "Helvetica Neue";
 	width: 30%;
 	float: right;
 	margin-top: 5%;
@@ -332,7 +302,6 @@ table, th, td {
 
 .caption2 {
 	font-size: 16px;
-	font-family: "Helvetica Neue";
 	width: 40%;
 	float: right;
 	margin-top: 5%;
@@ -341,7 +310,6 @@ table, th, td {
 
 .caption-large {
 	font-size: 14px;
-	font-family: "Helvetica Neue";
 	width: 65%;
 	float: right;
 	margin-top: 5%;
@@ -373,7 +341,6 @@ table, th, td {
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
     background-color: rgb(247, 122, 100);
-    font-family: "Helvetica Neue";
     font-size: 18px;
     color: white;
     cursor: pointer;
@@ -388,7 +355,6 @@ table, th, td {
 .panel {
     padding: 0 18px;
     font-size: 14px;
-    font-family: "Helvetica Neue";
     color: #3A3A3A;
 }
 
@@ -441,17 +407,6 @@ table, th, td {
 }
 
 @media only screen and (max-width: 770px) {
-	#arrow-down {
-		width: 70px;
-		height: 70px;
-	}
-	
-	#arrow-up {
-		width: 40px;
-		height: 40px;
-		background-color: #18A398;
-		opacity: .8;
-	}
 
 	.nav-text {
 		display: none;
