--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,7 +1,22 @@
 #projects {
 	font-family: "Avenir";
+	width: 65%;
+	margin-left: 25%;
+	margin-right: 15%;
+}
+
+#secondary-projects {
 	display: grid;
-	grid-template-columns: repeat(2, 1fr);
+	grid-template-columns: repeat(4, 1fr);
+	overflow: scroll;
+	margin-bottom: 10%;
+}
+
+.secondary-pic {
+	width: 18vw;
+	height: 18vw;
+	margin-right: 5px;
+	cursor: pointer;
 }
 
 #projects a {
@@ -10,180 +25,148 @@
 }
 
 .project-title {
-    font-weight: 100;
-	font-size: 28px;	
-}
-
-.project-title-mobile {
-    font-weight: 100;
-	font-size: 24px; 
-	display: none;
+    font-weight: 500;
+	font-size: 24px;	
 }
 
 .project {
 	position: relative;
-	color: black;
-	cursor: pointer;
+	height: 100vh;
 }
 
 .project-pic {
-	width: 35vw;
-	height: 35vw;
-	margin: 5vw;
-	border: 1px solid #ECECEC;
+	width: 30vw;
+	height: 30vw;
+	margin-top: 5%;
+	margin-bottom: 5%;
 	z-index: 1;
 	cursor: pointer;
 }
 
-.captions {
+.caption {
     font-weight: 180;
-	font-size: 20px;
+	font-size: 16px;
 	text-align: left;
-	width: 85%;
-	display: none;
+	width: 50%;
+	margin-left: 1%;
+	display: inline-block;
 	text-decoration: none;
 }
 
-.overlay {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 35vw;
-	height: 35vw;
-	margin: 5vw;
-	background-color: rgba(0,0,0,0);
-	z-index: 2;
-    -webkit-transition: background-color 0.6s; /* Safari */
-    transition: background-color 0.6s;
-}
-
-.overlay-text {
-	opacity: 0;
-	color: white;
-    font-weight: 280;
-	font-size: 18px;
+.secondary-caption {
+    font-weight: 180;
+	font-size: 14px;
 	text-align: left;
-	padding: 40px;
-	padding-top: 60%;
-    -webkit-transition: opacity 0.6s; /* Safari */
-    transition: opacity 0.6s;
+	width: 80%;
+	display: inline-block;
+	text-decoration: none;
 }
 
-#purple:hover {
-	background-color: rgba(102,44,146,0.9);
-    -webkit-transition: background-color 0.6s; /* Safari */
-    transition: background-color 0.6s;
+#secondary-title {
+	font-family: "Tokyo-Outline";
+	position: relative;
+    font-weight: 100;
+    letter-spacing: 5px;
+	font-size: 50px;
+	width: 100%;
+	display: block;
+	margin-bottom: 5%;
 }
 
-#teal:hover {
-	background-color: rgba(24,163,152,0.9);
-    -webkit-transition: background-color 0.6s; /* Safari */
-    transition: background-color 0.6s;
+.project-info {
+	text-align: left;
+	font-weight: 500;
+	font-size: 12px;
 }
 
-#green:hover {
-	background-color: rgba(73,206,92,0.9);
-    -webkit-transition: background-color 0.6s; /* Safari */
-    transition: background-color 0.6s;
+.project-info a {
+	color: rgb(247, 122, 100);
 }
 
-#gray:hover {
-	background-color: rgba(51,49,46,0.9);
-    -webkit-transition: background-color 0.6s; /* Safari */
-    transition: background-color 0.6s;
-}
-
-#orange:hover {
-	background-color: rgba(238,107,77,0.9);
-    -webkit-transition: background-color 0.6s; /* Safari */
-    transition: background-color 0.6s;
-}
-
-#blue:hover {
-	background-color: rgba(46,143,234,0.9);
-    -webkit-transition: background-color 0.6s; /* Safari */
-    transition: background-color 0.6s;
-}
-
-#yellow:hover {
-	background-color: rgba(254,228,105,0.9);
-    -webkit-transition: background-color 0.6s; /* Safari */
-    transition: background-color 0.6s;
-}
-
-.overlay-text:hover {
+.learn-more {
+	width: 150px;
+	height: 35px;
+	text-align: center;
+	padding-top: 17px;
+	font-weight: 500;
+	letter-spacing: 2px;
+	font-size: 14px;
+	cursor: pointer;
+	margin-bottom: 5%;
+	margin-top: 5%;
+	display: block;
 	opacity: 1;
     -webkit-transition: opacity 0.6s; /* Safari */
     transition: opacity 0.6s;
 }
 
+.learn-more:hover {
+	opacity: 0.8;
+    -webkit-transition: opacity 0.6s; /* Safari */
+    transition: opacity 0.6s;
+}
+
 @media only screen and (max-width: 800px) {
+
 	#projects {
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
+		width: 90%;
+		margin-left: 5%;
+		margin-right: 5%;
 	}
 
 	.project {
-		background-color: rgba(255,255,255,.4);
-		margin: 2px;
+		margin-bottom: 10%;
+		height: 50vh;
 	}
 
 	.project-pic {
-		width: 38vw;
-		height: 38vw;
-		margin: 20px;
-		border: 1px solid #ECECEC;		
+		height: 40vw;
+		width: 40vw;
 	}
 
-	.overlay {
-		width: 38vw;
-		height: 38vw;
-		margin: 20px;		
-	}
-
-	.project-title-mobile {
-		display: block;
-		font-weight: 300;
-	}
-
-	.captions {
+	.caption {
 		display: block;
 		margin-left: 22px;
 		margin-bottom: 22px;
 		font-weight: 400;
-		font-size: 16px;
+		font-size: 14px;
 	}
 
-	.overlay:hover {
-		background-color: rgba(0,0,0,0);
+	.secondary-pic {
+		width: 40vw;
+		height: 40vw;
+		margin-right: 1vh;
 	}
 
-	.overlay-text:hover {
-		opacity: 0;
-	}
 }
 
 @media only screen and (max-width: 600px) {
-	#projects{
-		display: grid;
-		grid-template-columns: repeat(1, 1fr);
+
+	#projects {
+		width: 100%;
+		margin-left: 0%;
+	}
+
+	.project {
+		height: 105vh;
 	}
 
 	.project-pic {
-		width: 70vw;
-		height: 70vw;
-		margin: 30px;
-		border: 1px solid #ECECEC;		
+		width: 100vw;
+		height: 100vw;	
 	}
 
-	.overlay {
-		width: 70vw;
-		height: 70vw;
-		margin: 30px;		
+	.caption {
+		margin-left: 5%;
+		width: 95%;
 	}
 
-	.captions {
-		margin-left: 35px;
-		margin-bottom: 40px;
+	#secondary-projects {
+		height: 50vh;
+		margin-left: 5%;
+	}
+
+	#secondary-title {
+		margin-left: 5%;
 	}
 }
