--- a/styles/projects.css
+++ b/styles/projects.css
@@ -8,7 +8,7 @@
 #secondary-projects {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
-	overflow: scroll;
+	overflow-x: scroll;
 	margin-bottom: 10%;
 }
 
