--- a/styles/nav.css
+++ b/styles/nav.css
@@ -54,10 +54,10 @@
 	position: absolute;
 	display: none;
 	right: 20px;
-	top: 40%;
-	width: 30px;
-	height: 30px;
-	z-index: 3;
+	top: 35%;
+	font-size: 24px;
+	color: black;
+	z-index: 5;
 }
 
 @media only screen and (max-width: 770px) {
