--- a/styles/projects.css
+++ b/styles/projects.css
@@ -151,6 +151,10 @@
 		height: 110vh;
 	}
 
+/*	.project:first-child {
+		height: 130vh;
+	}*/
+
 	.project-pic {
 		width: 105vw;
 		height: 105vw;	
