--- a/styles/global2.css
+++ b/styles/global2.css
@@ -28,6 +28,7 @@
 @font-face {
 	font-family: "Avenir";
 	src: url("fonts/Avenir.otf");
+}
 
 /* Table styles */
 table, th, td {
@@ -38,7 +39,7 @@ table, th, td {
 
 /* Body */
 body {
-	font-family: "Avenir", "Arial", Sans-Serif;
+	font-family: "Avenir";
 }
 
 body a {
