--- a/styles/global2.css
+++ b/styles/global2.css
@@ -61,8 +61,11 @@ li {
 	position: fixed;
 	right: 8px;
 	bottom: 8px;
-	height: 30px;
-	width: 30px;
+	height: 20px;
+	width: 20px;
+	padding: 10px;
+	border-radius: 50%;
+	box-shadow: 1px 1px 15px #e5e5e5;
 	cursor: pointer;
 	z-index: 1;
 	-webkit-transform: rotate(180deg);
