--- a/styles/archive.css
+++ b/styles/archive.css
@@ -6,10 +6,14 @@
 }
 
 .year-title {
-	padding-top: 4vh;
+	padding-top: 15vh;
 	padding-bottom: 4vh;
 	font-size: 28px;
-	font-weight: 700;
+	letter-spacing: 2px;
+}
+
+.project-title {
+	font-size: 24px;
 }
 
 .section {
